# django-uwsgi

./: .gitignore  manage.py  pyproject.toml  server.uwsgi.ini
accounts/: admin.py  background_runs.py  manager.py  models.py  signals.py
accounts/migrations/: 0001_initial.py
uwsgi_spooler/: asgi.py  background_run.py  settings.py  urls.py  wsgi.py
